Update 0.6.1.6 - Working on unit preset editor. - Slight change in how controlled retreat work, now moving command during controlled retreat state do not stop the retreat state but simply issue new target. - Minor bugs fixed.

--- a/configuration.ini
+++ b/configuration.ini
@@ -2,7 +2,7 @@
 screenwidth = 1366
 screenheight = 768
 fullscreen = 0
-playername = Remance
+playername = Leafleft
 soundvolume = 100.0
 musicvolume = 0.0
 voicevolume = 0.0
