dynamically set screen width and height

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,11 +1,10 @@
 [DEFAULT]
-screenwidth = 1366
-screenheight = 768
+screenwidth = 1920
+screenheight = 1080
 fullscreen = 0
-playername = Leafleft
+playername = Noname
 soundvolume = 100.0
 musicvolume = 0.0
 voicevolume = 0.0
 maxfps = 60
-ruleset = 1
 
