--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ networkx~=3.1
 natsort~=8.3.1
 pandas~=2.0.2
 Pillow~=10.0.0
-pygame-ce~=2.3.0
+pygame~=2.5.0
 pyperclip~=1.8.2
 screeninfo~=0.8.1
 pathfinding~=1.0.1
